fixing css to correctly show with github

--- a/chic-parm.html
+++ b/chic-parm.html
@@ -16,7 +16,7 @@
 
     <h1 class="title">Easy Chicken Parmesan</h1>
 
-    <img src="images/chic-parm-img.jpg" alt="bowl of baked chicken parmesan over spagetti.">
+    <img src="/images/chic-parm-img.jpg" alt="bowl of baked chicken parmesan over spagetti.">
 
     <p>Chicken parmesan, also known as chicken parmigiana, is a classic Italian restaurant favorite. This dish actually originated from Italian immigrants in the US in the ’50s and is thought to have originated from Eggplant Parmesan, a traditional Italian dish.</p>
 
