--- a/taco-salad.html
+++ b/taco-salad.html
@@ -16,7 +16,7 @@
 
     <h1 class="title">Taco Salad</h1>
 
-    <img src="images/taco-salad-img.jpg" alt="lettuce topped with chips, ground beef, tomatoe, avacado, and sour cream">
+    <img src="/images/taco-salad-img.jpg" alt="lettuce topped with chips, ground beef, tomatoe, avacado, and sour cream">
 
     <p>Taco Salad is a classic recipe everyone should know how to make. This version is quick, flavorful, hearty, a total breeze to make and it’s a dinner everyone can agree on both young and old alike!</p>
 
