--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Odin Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +13,17 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1 class="title">Odin Recipes</h1>
-        <ul>
-            <div class="container">
-                <li class="burritos link-list"><a href="burritos.html">Black Bean Burrito Recipe</a></li>
-                <li class="parm link-list"><a href="chic-parm.html">Baked Chicken Parmesan</a></li>
-                <li class="salad link-list"><a href="taco-salad.html">Taco Salad</a></li>
-            </div>
-            
-        </ul>
+    <ul>
+        <div class="container">
+            <li class="burritos link-list"><a href="burritos.html">Black Bean Burrito Recipe</a></li>
+            <li class="parm link-list"><a href="chic-parm.html">Baked Chicken Parmesan</a></li>
+            <li class="salad link-list"><a href="taco-salad.html">Taco Salad</a></li>
+        </div>
+
+    </ul>
 </body>
+
 </html>
